# phoenix

./: .gitignore  README.md  ricerca-allenamento-longevita-autofagia.md
.claude/docs/: decisions.md  glossary.md  qa-review-2026-03-13.md  registry.md  request-log.md  tdesign-patterns.md
.github/workflows/: release.yml
phoenix_app/: README.md  pubspec.yaml
phoenix_app/android/app/src/main/jni/: CMakeLists.txt  phoenix_bridge.cpp
phoenix_app/android/app/src/main/jni/llama.cpp/ggml/include/: ggml.h
phoenix_app/android/app/src/main/jni/llama.cpp/ggml/src/: ggml-quants.c  ggml.c
phoenix_app/android/app/src/main/jni/llama.cpp/ggml/src/ggml-cpu/: CMakeLists.txt  ggml-bitnet-mad.cpp  ggml-bitnet-mad.h  ggml-bitnet.h  ggml-cpu.c  ops.cpp  quants.c  quants.h
phoenix_app/android/app/src/main/jni/llama.cpp/include/: llama.h
phoenix_app/android/app/src/main/jni/llama.cpp/src/: llama-arch.cpp  llama-model-loader.cpp
phoenix_app/ios/: bitnet_ios.podspec
phoenix_app/lib/: main.dart
phoenix_app/linux/: CMakeLists.txt
phoenix_app/test/: morning_hrv_check_test.dart  (+11 more)
references/: CALISTHENIC.xlsx  DIETARY REGIME.xlsx  MONTH A.xlsx  MONTH B.xlsx  MONTH C.xlsx  age-sex-adaptations-chinese-russian.md  chinese-fitness-apps-design-research.md  colmi-integration.md  conditional-supplementation-chinese-russian-research.md  esecuzione-esercizi.md  exercise-databases-research.md  extended-fasting-chinese-russian-research.md  motor-learning-familiarization-chinese-russian.md  nutrition-protocol-verified.md  phoenix-protocol.md  pro-autophagy-foods-verification.md  protocol-1-verified.md  protocol-1.md  russian-fitness-app-design-research.md  training-analysis-verified.md  training-research-trilingual.md  tre-nutrition-longevity-research.md
scripts/: update-version.sh
(+246 files in other folders)
